<resources>
    <string name="app_name">COVID - 19 Tracker</string>
    <string name="please_wait">Please wait</string>
    <string name="india_country_code">+91</string>
    <string name="phone_num">Phone No.*</string>
    <string name="otp">OTP*</string>
    <string name="am_i_infected">Am I infected with the corona virus?</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_sent">OTP Sent Successfully</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verifying_otp">Verifying OTP</string>
    <string name="verif_success">Verification Successful</string>
    <string name="sending_otp">Sending OTP…</string>
    <string name="hyphen">-</string>

    <string name="title_personal_info">Personal Info</string>
    <string name="title_to_whom">To Whom?</string>

    <string name="err_enter_valid_phn_num">Enter valid phone number!</string>
    <string name="err_enter_valid_otp">Enter valid 6 digit OTP!</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">Next</string>
    <string name="name">Name*</string>
    <string name="email">Email</string>
    <string name="address">Address*</string>
    <string name="age">Age*</string>
    <string name="powered_by">Powered By</string>
    <string name="title_mdm_hospital">Mathuradas Mathur Hospital</string>
    <string name="relation">Relation*</string>
    <string name="international">International</string>
    <string name="domestic">Domestic</string>
    <string name="country">Country*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="lorem_question">Do you came in direct close physicals of laboratory confirmed positive case?</string>
    <string name="back">Back</string>
    <string name="conclusion">Conclusion</string>
    <string name="lorem_conclusion">Seek a consultation with Doctor.</string>
    <string name="err_enter_valid_name">Enter valid name!</string>
    <string name="err_enter_valid_age">Enter valid age!</string>
    <string name="err_enter_valid_mail">Enter valid email!</string>
    <string name="err_enter_valid_address">Enter valid address!</string>
    <string name="str_search">Search here..</string>
    <string name="not_data_found">No Data Found!</string>
    <string name="no_search_results">No Search Result!</string>
    <string name="select_relation">Select Relation</string>
    <string name="err_select_relation">Select relation!</string>
    <string name="title_travel_history">Travel History</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_hin">हाँ</string>
    <string name="no_hin">नहीं</string>
    <string name="yes_hin_eng">Yes / हाँ</string>
    <string name="no_hin_eng">No / नहीं</string>
    <string name="title_checklist">Start Checklist</string>
    <string name="title_app_recommendation">App Recommendation</string>
    <string name="re_evaluate">Re-evaluate</string>
    <string name="no_internet">You are offline!</string>
    <string name="tracker">Tracker</string>
    <string name="link_covid_govt_advisory">Corona - Government Advisory</string>
    <string name="select_travel_history">If you have traveled international or domestic, please select travel history -</string>
    <string name="none">None</string>


    <string-array name="arr_relations">
        <item>Father</item>
        <item>Mother</item>
        <item>Spouse</item>
        <item>Children</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Grand-Parent</item>
    </string-array>

</resources>
