<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.mdm_app_covid_19.views.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSendOtp"
        android:padding="@dimen/_10sdp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/txtTitle"
            android:scaleType="fitCenter"
            android:id="@+id/imgBg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:text="@string/am_i_infected"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_above="@id/viewInputs"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_14ssp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/viewInputs"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/viewPhnEdit"
                android:gravity="center_vertical"
                android:background="@drawable/bg_grey_rounded_edittext">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/india_country_code"
                    android:maxLength="15"
                    android:background="@color/colorTransparent"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:id="@+id/etCountryCode"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:id="@+id/etPhnNum"
                    android:inputType="phone"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/phone_num"
                    android:background="@color/colorTransparent"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:id="@+id/txtTimer"
                    android:visibility="invisible"
                    android:textColor="@color/colorText"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/viewOtpEdit"
                android:visibility="gone"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:padding="@dimen/_10sdp"
                    android:id="@+id/etOtp"
                    android:maxLength="6"
                    android:inputType="number"
                    android:background="@drawable/bg_grey_rounded_edittext"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:id="@+id/btnResendOtp"
                android:visibility="gone"
                android:fontFamily="@font/font_open_sans_bold"
                android:textSize="@dimen/_11ssp"
                android:layout_margin="@dimen/_10sdp"/>
        </LinearLayout>
    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        style="@style/MyBlueButtonStyle"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/btnSendOtp"
        android:fontFamily="@font/font_open_sans_bold"
        android:textSize="@dimen/_12ssp"
        android:layout_alignParentBottom="true"/>

    <!--<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentContainer"
        />-->
</RelativeLayout>
